[package]
name = "lookup"
version = "0.3.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Mezmo <engineering@mezmo.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
inherent = "1.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
once_cell = { version = "1.17" }
quickcheck = { version = "1.0.3", optional = true }

# WASM required libraries that are enabled for the path-parsing-wasm compile feature
wasm-bindgen = {version = "0.2.63", optional = true }
js-sys = { version = "0.3.64", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

# This was moved from the dev-dependencies section into the main section so it could be
# declared optinal (dev-dependencies can't be optional) with the goal of turning it into
# a feature flag for perf-testing. Without this shuffling, wasm-pack test won't be able
# to compile the test code and execute our unit tests.
criterion = { version = "0.4.0", optional = true, features = ["html_reports", "async_tokio"] }

[dev-dependencies]
serde_json = { version = "1.0.93", features = ["raw_value"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
quickcheck = { version = "1.0.3" }
wasm-bindgen-test = "0.3.0"

# Enable the js feature of getrandom, which is used by quickcheck. This allows wasm-pack
# to compile and execute the unit tests.
getrandom = { features = ["js"] }

[build-dependencies]
lalrpop = "0.19.8"

[features]
arbitrary = ["dep:quickcheck"]
perf-testing = ["dep:criterion"]
path-parsing-wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_error_panic_hook"]

[[bench]]
name = "lookup"
path = "benches/lookup.rs"
harness = false
test = false
required-features = ["perf-testing"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
