[package]
name = "vrl-tests"
version = "0.4.2"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
path = { path = "../path", version = "0.4.2" }
stdlib = { package = "vrl-stdlib", path = "../stdlib" }
vrl-diagnostic = { path = "../diagnostic", version = "0.4.2" }
vrl-compiler = { path = "../compiler", version = "0.4.2" }
vrl-core = { path = "../core", version = "0.4.2" }
value = { path = "../value", version = "0.4.2" }

ansi_term = "0.12"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.1.11", features = ["derive"] }
glob = "0.3"
prettydiff = "0.6"
regex = "1"
serde = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.0" }

[features]
default = []
