[package]
name = "vrl-web-playground"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
vrl = { path = "../..", default-features = false , version = "0.3.1" }
value = { path = "../value", default-features = false , version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
gloo-utils = { version = "0.1", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.stdlib]
package = "vrl-stdlib"
path = "../stdlib"
default-features = true

